Fix #356 - wrap "uses grouping" statement with a container for augments

--- a/OAS/tapi-virtual-network@2018-08-31.yaml
+++ b/OAS/tapi-virtual-network@2018-08-31.yaml
@@ -70,161 +70,6 @@ paths:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/context/notif-subscription/:
-    post:
-      tags:
-      - "tapi-notification"
-      description: "creates tapi.notification.NotificationSubscriptionService"
-      parameters:
-      - in: "body"
-        name: "tapi.notification.NotificationSubscriptionService.body-param"
-        description: "tapi.notification.NotificationSubscriptionService to be added\
-          \ to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-  /data/context/notif-subscription={uuid}/:
-    get:
-      tags:
-      - "tapi-notification"
-      description: "returns tapi.notification.NotificationSubscriptionService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.NotificationSubscriptionService"
-          schema:
-            $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-        400:
-          description: "Internal error"
-    post:
-      tags:
-      - "tapi-notification"
-      description: "creates tapi.notification.NotificationSubscriptionService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.notification.NotificationSubscriptionService.body-param"
-        description: "tapi.notification.NotificationSubscriptionService to be added\
-          \ to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-    put:
-      tags:
-      - "tapi-notification"
-      description: "creates or updates tapi.notification.NotificationSubscriptionService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.notification.NotificationSubscriptionService.body-param"
-        description: "tapi.notification.NotificationSubscriptionService to be added\
-          \ or updated"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        204:
-          description: "Object modified"
-    delete:
-      tags:
-      - "tapi-notification"
-      description: "removes tapi.notification.NotificationSubscriptionService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        400:
-          description: "Internal error"
-        204:
-          description: "Object deleted"
-  /data/context/notif-subscription={uuid}/notification={notification-uuid}/:
-    get:
-      tags:
-      - "tapi-notification"
-      description: "returns tapi.notification.Notification"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      - name: "notification-uuid"
-        in: "path"
-        description: "Id of notification"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.Notification"
-          schema:
-            $ref: "#/definitions/tapi.notification.Notification"
-        400:
-          description: "Internal error"
-  /data/context/notification={uuid}/:
-    get:
-      tags:
-      - "tapi-notification"
-      description: "returns tapi.notification.Notification"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notification"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.Notification"
-          schema:
-            $ref: "#/definitions/tapi.notification.Notification"
-        400:
-          description: "Internal error"
-  /data/context/nw-topology-service/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.NetworkTopologyService"
-      parameters: []
-      responses:
-        200:
-          description: "tapi.topology.NetworkTopologyService"
-          schema:
-            $ref: "#/definitions/tapi.topology.NetworkTopologyService"
-        400:
-          description: "Internal error"
   /data/context/service-interface-point/:
     post:
       tags:
@@ -316,257 +161,6 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of service-interface-point"
-        required: true
-        type: "string"
-      responses:
-        400:
-          description: "Internal error"
-        204:
-          description: "Object deleted"
-  /data/context/topology={uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.Topology"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.Topology"
-          schema:
-            $ref: "#/definitions/tapi.topology.Topology"
-        400:
-          description: "Internal error"
-  /data/context/topology={uuid}/link={link-uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.Link"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "link-uuid"
-        in: "path"
-        description: "Id of link"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.Link"
-          schema:
-            $ref: "#/definitions/tapi.topology.Link"
-        400:
-          description: "Internal error"
-  /data/context/topology={uuid}/node={node-uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.Node"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.Node"
-          schema:
-            $ref: "#/definitions/tapi.topology.Node"
-        400:
-          description: "Internal error"
-  /data/context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.NodeRuleGroup"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      - name: "node-rule-group-uuid"
-        in: "path"
-        description: "Id of node-rule-group"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.NodeRuleGroup"
-          schema:
-            $ref: "#/definitions/tapi.topology.NodeRuleGroup"
-        400:
-          description: "Internal error"
-  /data/context/topology={uuid}/node={node-uuid}/node-rule-group={node-rule-group-uuid}/inter-rule-group={inter-rule-group-uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.InterRuleGroup"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      - name: "node-rule-group-uuid"
-        in: "path"
-        description: "Id of node-rule-group"
-        required: true
-        type: "string"
-      - name: "inter-rule-group-uuid"
-        in: "path"
-        description: "Id of inter-rule-group"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.InterRuleGroup"
-          schema:
-            $ref: "#/definitions/tapi.topology.InterRuleGroup"
-        400:
-          description: "Internal error"
-  /data/context/topology={uuid}/node={node-uuid}/owned-node-edge-point={owned-node-edge-point-uuid}/:
-    get:
-      tags:
-      - "tapi-topology"
-      description: "returns tapi.topology.NodeEdgePoint"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of topology"
-        required: true
-        type: "string"
-      - name: "node-uuid"
-        in: "path"
-        description: "Id of node"
-        required: true
-        type: "string"
-      - name: "owned-node-edge-point-uuid"
-        in: "path"
-        description: "Id of owned-node-edge-point"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.topology.NodeEdgePoint"
-          schema:
-            $ref: "#/definitions/tapi.topology.NodeEdgePoint"
-        400:
-          description: "Internal error"
-  /data/context/virtual-nw-service/:
-    post:
-      tags:
-      - "tapi-virtual-network"
-      description: "creates tapi.virtual.network.VirtualNetworkService"
-      parameters:
-      - in: "body"
-        name: "tapi.virtual.network.VirtualNetworkService.body-param"
-        description: "tapi.virtual.network.VirtualNetworkService to be added to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-  /data/context/virtual-nw-service={uuid}/:
-    get:
-      tags:
-      - "tapi-virtual-network"
-      description: "returns tapi.virtual.network.VirtualNetworkService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of virtual-nw-service"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.virtual.network.VirtualNetworkService"
-          schema:
-            $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
-        400:
-          description: "Internal error"
-    post:
-      tags:
-      - "tapi-virtual-network"
-      description: "creates tapi.virtual.network.VirtualNetworkService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of virtual-nw-service"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.virtual.network.VirtualNetworkService.body-param"
-        description: "tapi.virtual.network.VirtualNetworkService to be added to list"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        409:
-          description: "Object already exists"
-    put:
-      tags:
-      - "tapi-virtual-network"
-      description: "creates or updates tapi.virtual.network.VirtualNetworkService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of virtual-nw-service"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "tapi.virtual.network.VirtualNetworkService.body-param"
-        description: "tapi.virtual.network.VirtualNetworkService to be added or updated"
-        required: false
-        schema:
-          $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
-      responses:
-        201:
-          description: "Object created"
-        400:
-          description: "Internal error"
-        204:
-          description: "Object modified"
-    delete:
-      tags:
-      - "tapi-virtual-network"
-      description: "removes tapi.virtual.network.VirtualNetworkService"
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of virtual-nw-service"
         required: true
         type: "string"
       responses:
@@ -1246,16 +840,9 @@ definitions:
   tapi.notification.ContextAugmentation1:
     type: "object"
     properties:
-      notif-subscription:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
-      notification:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.notification.Notification"
+      notification-context:
+        description: "Augments the base TAPI Context with NotificationService information"
+        $ref: "#/definitions/tapi.notification.NotificationContext"
     x-augmentation:
       prefix: "tapi-notification"
       namespace: "urn:onf:otcc:yang:tapi-notification"
@@ -1373,6 +960,19 @@ definitions:
             \ specifics of this is typically dependent on the implementation protocol\
             \ & mechanism and hence is typed as a string."
       description: "none"
+  tapi.notification.NotificationContext:
+    type: "object"
+    properties:
+      notif-subscription:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.notification.NotificationSubscriptionService"
+      notification:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.notification.Notification"
   tapi.notification.NotificationSubscriptionService:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -1634,14 +1234,9 @@ definitions:
   tapi.topology.ContextAugmentation3:
     type: "object"
     properties:
-      nw-topology-service:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
-      topology:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.topology.Topology"
+      topology-context:
+        description: "Augments the base TAPI Context with TopologyService information"
+        $ref: "#/definitions/tapi.topology.TopologyContext"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
@@ -1879,7 +1474,7 @@ definitions:
         node-edge-point-uuid:
           type: "string"
           description: "none"
-          x-path: "/tapi-common:context/tapi-topology:topology/tapi-topology:node/tapi-topology:owned-node-edge-point/tapi-topology:uuid"
+          x-path: "/tapi-common:context/tapi-topology:topology-context/tapi-topology:topology/tapi-topology:node/tapi-topology:owned-node-edge-point/tapi-topology:uuid"
       description: "none"
   tapi.topology.NodeRef:
     allOf:
@@ -1889,7 +1484,7 @@ definitions:
         node-uuid:
           type: "string"
           description: "none"
-          x-path: "/tapi-common:context/tapi-topology:topology/tapi-topology:node/tapi-topology:uuid"
+          x-path: "/tapi-common:context/tapi-topology:topology-context/tapi-topology:topology/tapi-topology:node/tapi-topology:uuid"
       description: "none"
   tapi.topology.NodeRuleGroup:
     allOf:
@@ -1929,7 +1524,7 @@ definitions:
         node-rule-group-uuid:
           type: "string"
           description: "none"
-          x-path: "/tapi-common:context/tapi-topology:topology/tapi-topology:node/tapi-topology:node-rule-group/tapi-topology:uuid"
+          x-path: "/tapi-common:context/tapi-topology:topology-context/tapi-topology:topology/tapi-topology:node/tapi-topology:node-rule-group/tapi-topology:uuid"
       description: "none"
   tapi.topology.ProtectionType:
     type: "string"
@@ -2036,13 +1631,24 @@ definitions:
         \        At the lowest level of recursion, an FD (within a network element\
         \ (NE)) represents a switch matrix (i.e., a fabric). Note that an NE can encompass\
         \ multiple switch matrices (FDs). "
+  tapi.topology.TopologyContext:
+    type: "object"
+    properties:
+      nw-topology-service:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+      topology:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.topology.Topology"
   tapi.topology.TopologyRef:
     type: "object"
     properties:
       topology-uuid:
         type: "string"
         description: "none"
-        x-path: "/tapi-common:context/tapi-topology:topology/tapi-topology:uuid"
+        x-path: "/tapi-common:context/tapi-topology:topology-context/tapi-topology:topology/tapi-topology:uuid"
   tapi.topology.TransferCostPac:
     type: "object"
     properties:
@@ -2188,11 +1794,9 @@ definitions:
   tapi.virtual.network.ContextAugmentation2:
     type: "object"
     properties:
-      virtual-nw-service:
-        type: "array"
-        description: "none"
-        items:
-          $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
+      virtual-network-context:
+        description: "Augments the base TAPI Context with VirtualNetworkService information"
+        $ref: "#/definitions/tapi.virtual.network.VirtualNetworkContext"
     x-augmentation:
       prefix: "tapi-virtual-network"
       namespace: "urn:onf:otcc:yang:tapi-virtual-network"
@@ -2258,6 +1862,14 @@ definitions:
           items:
             $ref: "#/definitions/tapi.topology.LatencyCharacteristic"
       description: "none"
+  tapi.virtual.network.VirtualNetworkContext:
+    type: "object"
+    properties:
+      virtual-nw-service:
+        type: "array"
+        description: "none"
+        items:
+          $ref: "#/definitions/tapi.virtual.network.VirtualNetworkService"
   tapi.virtual.network.VirtualNetworkService:
     allOf:
     - $ref: "#/definitions/tapi.common.GlobalClass"
@@ -2328,7 +1940,7 @@ definitions:
       virtual-nw-service-uuid:
         type: "string"
         description: "none"
-        x-path: "/tapi-common:context/tapi-virtual-network:virtual-nw-service/tapi-virtual-network:uuid"
+        x-path: "/tapi-common:context/tapi-virtual-network:virtual-network-context/tapi-virtual-network:virtual-nw-service/tapi-virtual-network:uuid"
   tapi.virtual.network.createvirtualnetworkservice.Input:
     type: "object"
     properties:
